templates/imagebox_template.yaml
---
# Source: imagebox/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-imagebox
  labels:
    helm.sh/chart: imagebox-1.0.0
    app.kubernetes.io/name: imagebox
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: imagebox
    app.kubernetes.io/instance: release-name
---
# Source: imagebox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-imagebox
  labels:
    helm.sh/chart: imagebox-1.0.0
    app.kubernetes.io/name: imagebox
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: imagebox
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: imagebox
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: imagebox
          securityContext:
            {}
          image: "kyso/imagebox:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: imagebox-http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /iiif
              port: imagebox-http
          readinessProbe:
            httpGet:
              path: /iiif
              port: imagebox-http
          resources:
            {}
---
# Source: imagebox/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-imagebox
  labels:
    helm.sh/chart: imagebox-1.0.0
    app.kubernetes.io/name: imagebox
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
---
# Source: imagebox/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-imagebox-test-connection"
  labels:
    helm.sh/chart: imagebox-1.0.0
    app.kubernetes.io/name: imagebox
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-imagebox:80/iiif']
  restartPolicy: Never
